# gemini-lk

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  assistant.py  docker-compose.yml  instructions.txt  pyproject.toml  utils.py
data/: all-package-details.json  customer-activated-package-details.json
